@@ -33,6 +33,8 @@
 #include <ags/X/machine/ags_live_dssi_bridge.h>
 #include <ags/X/machine/ags_live_lv2_bridge.h>
 
+#include <ags/i18n.h>
+
 void ags_machine_selection_class_init(AgsMachineSelectionClass *machine_selection);
 void ags_machine_selection_connectable_interface_init(AgsConnectableInterface *connectable);
 void ags_machine_selection_init(AgsMachineSelection *machine_selection);
@@ -117,7 +119,7 @@ ags_machine_selection_init(AgsMachineSelection *machine_selection)
   
   g_object_set(G_OBJECT(machine_selection),
 	       "modal", TRUE,
-	       "title", g_strdup("select machines"),
+	       "title", i18n("select machines"),
 	       NULL);
 
   gtk_dialog_add_buttons(GTK_DIALOG(machine_selection),
